examples/tests/snapshots/25_menu__headless_snapshot_click_opens_navigates_and_activates.snap
---
source: examples/tests/24_menu.rs
expression: view
---
··················································
···File·▾·········································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
·Click·File,·or·Tab+Enter,·to·open·the·menu.······
·Up/Down·navigate,·Enter·picks,·Escape·closes.····
·Last·action:·(none·yet)··························

--- frame ---
··················································
···File·▾·········································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
·Click·File,·or·Tab+Enter,·to·open·the·menu.······
·Up/Down·navigate,·Enter·picks,·Escape·closes.····
·Last·action:·(none·yet)··························

--- frame ---
··················································
···File·▾·········································
·New··············································
·Open·············································
·──────────────────────···························
·[x]·Word·Wrap····································
·[·]·Line·Numbers·································
·v················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
·Click·File,·or·Tab+Enter,·to·open·the·menu.······
·Up/Down·navigate,·Enter·picks,·Escape·closes.····
·Last·action:·(none·yet)··························

--- frame ---
··················································
···File·▾·········································
·New··············································
·Open·············································
·──────────────────────···························
·[x]·Word·Wrap····································
·[·]·Line·Numbers·································
·v················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
·Click·File,·or·Tab+Enter,·to·open·the·menu.······
·Up/Down·navigate,·Enter·picks,·Escape·closes.····
·Last·action:·(none·yet)··························

--- frame ---
··················································
···File·▾·········································
·New··············································
·Open·············································
·──────────────────────···························
·[x]·Word·Wrap····································
·[·]·Line·Numbers·································
·v················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
·Click·File,·or·Tab+Enter,·to·open·the·menu.······
·Up/Down·navigate,·Enter·picks,·Escape·closes.····
·Last·action:·(none·yet)··························

--- frame ---
··················································
···File·▾·········································
·New··············································
·Open·············································
·──────────────────────···························
·[·]·Word·Wrap····································
·[·]·Line·Numbers·································
·v················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
·Click·File,·or·Tab+Enter,·to·open·the·menu.······
·Up/Down·navigate,·Enter·picks,·Escape·closes.····
·Last·action:·Word·Wrap:·off······················
